--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "devDependencies": {
     "gulp": "^5.0.0",
     "gulp-ejs": "^5.1.0",
-    "gulp-rename": "^2.0.0",
-    "moment": "^2.30.1"
+    "moment": "^2.30.1",
+    "through2": "^4.0.2"
   }
 }
